solved some layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,15 +7,7 @@ body{
   background-color:#dae9ed;
 }
 
-.background{
-  background-image:url('../images/gameon1.jpg');
-  background-repeat:no-repeat;
-  background-size:cover;
-  width:100%;
-  height:100%;
-  position:fixed;
-  z-index:-1000;
-}
+
 
 h1{
   margin-top:8%;
@@ -70,4 +62,19 @@ h2{
 
 label{
   color: #dd7c0d
+}
+
+.background{
+  top:0;
+  background-image:url('../images/gameon1.jpg');
+  background-repeat:no-repeat;
+  background-size:cover;
+  width:100%;
+  height:100%;
+  position:fixed;
+  z-index:-1000;
+}
+
+.white{
+  color:white;
 }
